--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     
     <meta property="og:title" content="My Word List" />
     <meta property="og:definitions" content="The greatest word list of them all" />
-    <meta property="og:image" content="{{ url_for('static', filename='logo_red.png') }}" />
+    <meta property="og:image" content="{{ url_for('static', filename='gambarlogo.jpg') }}" />
     
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon" />
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon" />
